additional fixes for calendar on mobile

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,9 @@ button {
 
  	.calendar li {
  		min-height: 22px !important;
- 		width: 12.4%;
+ 		width: 12.4% !important;
+ 		height: 12.4% !important;
+ 		padding: 5px !important;
  		font-size: 16px;
  	}
 
